--- a/testing.html
+++ b/testing.html
@@ -1,26 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        /* Draggable folder CSS element */
-        .draggable {
-            width: 64px;
-            height: 56px;
+        /* Window styling */
+        .window {
+            width: 400px;
+            height: 300px;
+            border: 2px solid black;
+            background-color: #C0C0C0;
             position: absolute;
+            font-family: 'Courier New', Courier, monospace;
             user-select: none;
-            background-size: cover;
-            transition: all 0.1s ease; /* Smooth transition for dragging */
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
+            overflow: hidden;
         }
 
-        /* Label text that follows folder */
+        .window-header {
+            background-color: #0066CC;
+            color: white;
+            padding: 10px;
+            cursor: move;
+        }
+
+        .window-content {
+            background-color: white;
+            height: calc(100% - 40px);
+            padding: 10px;
+            overflow-y: auto;
+            font-size: 12px;
+        }
+
+        .resizer {
+            width: 10px;
+            height: 10px;
+            background-color: #0066CC;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            cursor: se-resize;
+        }
+
+        .draggable {
+            width: 64px;
+            height: 64px;
+            position: absolute;
+            background-size: cover;
+            user-select: none;
+        }
+
         .text {
             position: absolute;
             text-align: center;
-            user-select: none;
             font-family: 'Comic Sans MS', cursive;
+            user-select: none;
         }
 
-        /* Mobile unsupported message */
         .mobile-message {
             display: none;
             position: fixed;
@@ -28,127 +64,164 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(255, 255, 255, 0.9);
+            background-color: rgba(255, 255, 255, 0.8);
             font-size: 72px;
             text-align: center;
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 1000;
-        }
-
-        .mobile-message button {
-            margin-top: 20px;
-            font-size: 24px;
-            padding: 10px 20px;
-            background-color: #ff5733;
-            color: white;
-            border: none;
-            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <!-- Mobile not supported message -->
-    <div class="mobile-message" id="mobileMessage">
-        <div>
-            <p>Mobile not supported yet, sorry :(</p>
-            <button id="dismissMobileMessage">Close</button>
-        </div>
-    </div>
+    <div class="mobile-message" id="mobileMessage">Mobile not supported yet, sorry :(</div>
 
-    <!-- Socials attributes -->
-    <a class="hyperlink" href="https://nuriel.net/socials.html" data-href="https://nuriel.net/socials.html" aria-label="Socials">
-        <div class="draggable" id="draggable1"></div>
-    </a>
-    <div class="text" id="text1">socials</div>
+    <!-- Journal Entries -->
+    <div class="draggable" id="draggable1"></div>
+    <div class="text" id="text1">6/21/24</div>
 
-    <!-- About attributes -->
-    <a class="hyperlink" href="https://nuriel.net/about.html" data-href="https://nuriel.net/about.html" aria-label="About">
-        <div class="draggable" id="draggable2"></div>
-    </a>
-    <div class="text" id="text2">about</div>
-
-    <!-- Placeholder attributes -->
-    <a class="hyperlink" href="https://nuriel.net/journals.html" data-href="https://nuriel.net/journals.html" aria-label="Journals">
-        <div class="draggable" id="draggable3"></div>
-    </a>
-    <div class="text" id="text3">journals</div>
-
-    <!-- Placeholder attributes -->
-    <a class="hyperlink" href="https://google.com" data-href="https://google.com" aria-label="Placeholder">
-        <div class="draggable" id="draggable4"></div>
-    </a>
-    <div class="text" id="text4">placeholder</div>
-
-    <!-- Placeholder attributes -->
-    <a class="hyperlink" href="https://google.com" data-href="https://google.com" aria-label="Placeholder">
-        <div class="draggable" id="draggable5"></div>
-    </a>
-    <div class="text" id="text5">placeholder</div>
-
-    <!-- JS script to implement draggability, hyperlink functionality, and mobile detection -->
     <script>
-        const imageUrls = [
-            'https://raw.githubusercontent.com/nurielmora/website/main/folderImages/bluePixelFolder.png',
-            'https://raw.githubusercontent.com/nurielmora/website/main/folderImages/greenPixelFolder.png',
-            'https://raw.githubusercontent.com/nurielmora/website/main/folderImages/orangePixelFolder.png',
-            'https://raw.githubusercontent.com/nurielmora/website/main/folderImages/purplePixelFolder.png',
-            'https://raw.githubusercontent.com/nurielmora/website/main/folderImages/blackPixelFolder.png'
-        ];
+        const imageUrls = ['https://raw.githubusercontent.com/FireMS/nuriel/main/journals/journal.png'];
+        const draggables = [document.getElementById('draggable1')];
+        const texts = [document.getElementById('text1')];
+        let isDraggingWindow = false;
 
-        const draggables = [];
-        const texts = [];
-        const offsets = {};
-        const isDragging = {};
-
-        for (let i = 1; i <= 5; i++) {
-            draggables[i] = document.getElementById(`draggable${i}`);
-            texts[i] = document.getElementById(`text${i}`);
-            isDragging[i] = false;
-
-            draggables[i].style.backgroundImage = `url(${imageUrls[i - 1]})`;
-
-            initializeFolder(draggables[i], texts[i], i);
-
-            draggables[i].addEventListener('mousedown', (event) => dragStart(event, i));
-            draggables[i].addEventListener('mouseup', dragEnd);
-            document.addEventListener('mousemove', (event) => drag(event, i));
-
-            // Mobile touch events
-            draggables[i].addEventListener('touchstart', (event) => dragStart(event, i));
-            draggables[i].addEventListener('touchend', dragEnd);
-            document.addEventListener('touchmove', (event) => drag(event, i));
+        // Check for mobile devices
+        const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+        if (isMobile) {
+            document.getElementById('mobileMessage').style.display = 'flex';
+        } else {
+            document.getElementById('mobileMessage').style.display = 'none';
         }
 
-        function initializeFolder(draggable, text, id) {
-            if (!localStorage.getItem(`folder${id}Position`)) {
-                let randomX = Math.floor(Math.random() * (window.innerWidth - 100));
-                let randomY = Math.floor(Math.random() * (window.innerHeight - 90));
-                randomX = Math.max(0, Math.min(randomX, window.innerWidth - 100));
-                randomY = Math.max(0, Math.min(randomY, window.innerHeight - 90));
-
-                draggable.style.left = randomX + 'px';
-                draggable.style.top = randomY + 'px';
-                updateTextPosition(draggable, text);
-            } else {
-                const savedPosition = JSON.parse(localStorage.getItem(`folder${id}Position`));
-                draggable.style.left = savedPosition.x + 'px';
-                draggable.style.top = savedPosition.y + 'px';
-                updateTextPosition(draggable, text);
-            }
+        // Initialize draggable journals
+        for (let i = 0; i < draggables.length; i++) {
+            draggables[i].style.backgroundImage = `url(${imageUrls[0]})`;
+            draggables[i].addEventListener('dblclick', (event) => openJournalWindow(event, i));
+            draggables[i].addEventListener('mousedown', (event) => {
+                if (!isDraggingWindow) dragStart(event, i);
+            });
         }
 
+        // Function to open journal in a draggable window
+        function openJournalWindow(event, id) {
+            const url = `https://nuriel.net/journals/6.21.24.txt`; // Hardcoded URL since no hyperlink
+
+            const newWindow = document.createElement('div');
+            newWindow.className = 'window';
+            document.body.appendChild(newWindow);
+
+            const header = document.createElement('div');
+            header.className = 'window-header';
+            header.innerText = `Journal Entry - ${texts[id].innerText}`;
+            newWindow.appendChild(header);
+
+            const content = document.createElement('div');
+            content.className = 'window-content';
+            newWindow.appendChild(content);
+
+            const resizer = document.createElement('div');
+            resizer.className = 'resizer';
+            newWindow.appendChild(resizer);
+
+            fetch(url)
+                .then(response => response.text())
+                .then(text => {
+                    content.innerText = text;
+                });
+
+            let offsetX = 0, offsetY = 0;
+            header.onmousedown = (e) => {
+                isDraggingWindow = true;
+                offsetX = e.clientX - newWindow.getBoundingClientRect().left;
+                offsetY = e.clientY - newWindow.getBoundingClientRect().top;
+                document.onmousemove = (e) => {
+                    newWindow.style.left = e.clientX - offsetX + 'px';
+                    newWindow.style.top = e.clientY - offsetY + 'px';
+                };
+                document.onmouseup = () => {
+                    isDraggingWindow = false;
+                    document.onmousemove = null;
+                    document.onmouseup = null;
+                };
+            };
+
+            let isResizing = false;
+            resizer.onmousedown = (e) => {
+                isResizing = true;
+                document.onmousemove = (e) => {
+                    if (isResizing) {
+                        const newWidth = e.clientX - newWindow.getBoundingClientRect().left;
+                        const newHeight = e.clientY - newWindow.getBoundingClientRect().top;
+                        newWindow.style.width = newWidth + 'px';
+                        newWindow.style.height = newHeight + 'px';
+                    }
+                };
+                document.onmouseup = () => {
+                    isResizing = false;
+                    document.onmousemove = null;
+                    document.onmouseup = null;
+                };
+            };
+        }
+
+        let offsets = {};
+        let isDragging = [];
+        
         function dragStart(event, id) {
             isDragging[id] = true;
-            event.preventDefault();
-            event.target.closest('.hyperlink').removeAttribute('href');
             const rect = draggables[id].getBoundingClientRect();
             offsets[id] = { x: event.clientX - rect.left, y: event.clientY - rect.top };
         }
 
-        function dragEnd() {
-            for (let i = 1; i <= 5; i++) {
+        document.addEventListener('mousemove', (event) => {
+            for (let i = 0; i < draggables.length; i++) {
+                if (isDragging[i]) {
+                    let newX = event.clientX - offsets[i].x;
+                    let newY = event.clientY - offsets[i].y;
+                    newX = Math.max(0, Math.min(newX, window.innerWidth - 64));
+                    newY = Math.max(0, Math.min(newY, window.innerHeight - 64));
+                    draggables[i].style.left = newX + 'px';
+                    draggables[i].style.top = newY + 'px';
+                    updateTextPosition(draggables[i], texts[i]);
+                }
+            }
+        });
+        function savePosition(id) {
+    const position = {
+        x: parseInt(draggables[id].style.left),
+        y: parseInt(draggables[id].style.top)
+    };
+    localStorage.setItem(`folder${id}Position`, JSON.stringify(position));
+}
+
+function loadPosition(id) {
+    const savedPosition = JSON.parse(localStorage.getItem(`folder${id}Position`));
+    if (savedPosition) {
+        draggables[id].style.left = savedPosition.x + 'px';
+        draggables[id].style.top = savedPosition.y + 'px';
+        updateTextPosition(draggables[id], texts[id]);
+    } else {
+        // Initialize random position if not saved
+        let randomX = Math.floor(Math.random() * (window.innerWidth - 100));
+        let randomY = Math.floor(Math.random() * (window.innerHeight - 90));
+        draggables[id].style.left = randomX + 'px';
+        draggables[id].style.top = randomY + 'px';
+        updateTextPosition(draggables[id], texts[id]);
+    }
+}
+
+function dragEnd() {
+    for (let i = 0; i < draggables.length; i++) {
+        if (isDragging[i]) {
+            isDragging[i] = false;
+            savePosition(i);
+        }
+    }
+}
+
+        document.addEventListener('mouseup', () => {
+            for (let i = 0; i < draggables.length; i++) {
                 if (isDragging[i]) {
                     isDragging[i] = false;
                     const position = {
@@ -162,38 +235,14 @@
             setTimeout(() => {
                 document.querySelectorAll('.hyperlink').forEach(link => link.setAttribute('href', link.getAttribute('data-href')));
             }, 100);
-        }
+        });
 
-        function drag(event, id) {
-            if (isDragging[id]) {
-                let newX = event.clientX - offsets[id].x;
-                let newY = event.clientY - offsets[id].y;
-
-                newX = Math.max(0, Math.min(newX, window.innerWidth - 64));
-                newY = Math.max(0, Math.min(newY, window.innerHeight - 56));
-                draggables[id].style.left = newX + 'px';
-                draggables[id].style.top = newY + 'px';
-                updateTextPosition(draggables[id], texts[id]);
-            }
-        }
-
+        // Updates the text position relative to the journal
         function updateTextPosition(draggable, text) {
             const folderRect = draggable.getBoundingClientRect();
             const textLeft = folderRect.left + (folderRect.width - text.offsetWidth) / 2;
             text.style.left = textLeft + 'px';
             text.style.top = folderRect.bottom + 'px';
-        }
-
-        // Check if user is on mobile
-        const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-        if (isMobile) {
-            document.getElementById('mobileMessage').style.display = 'flex';
-            document.getElementById('mobileMessage').style.top = '50%';
-            document.getElementById('dismissMobileMessage').addEventListener('click', () => {
-                document.getElementById('mobileMessage').style.display = 'none';
-            });
-        } else {
-            document.getElementById('mobileMessage').style.display = 'none'; // Hide the message if not on a mobile device
         }
     </script>
 </body>
