--- a/testing.html
+++ b/testing.html
@@ -5,77 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         /* Window styling */
-        .window {
-            width: 400px;
-            height: 300px;
-            border: 2px solid black;
-            background-color: #C0C0C0;
-            position: absolute;
-            font-family: 'Courier New', Courier, monospace;
-            user-select: none;
-            box-shadow: 0 0 10px rgba(0,0,0,0.5);
-            overflow: hidden;
+        .window { 
+            width: 400px; 
+            height: 300px; 
+            border: 2px solid black; 
+            background-color: #C0C0C0; 
+            position: absolute; 
+            font-family: 'Courier New', Courier, monospace; 
+            user-select: none; 
+            box-shadow: 0 0 10px rgba(0,0,0,0.5); 
+            overflow: hidden; 
         }
-
-        .window-header {
-            background-color: #0066CC;
-            color: white;
-            padding: 10px;
-            cursor: move;
+        .window-header { 
+            background-color: #0066CC; 
+            color: white; 
+            padding: 10px; 
+            cursor: move; 
         }
-
-        .window-content {
-            background-color: white;
-            height: calc(100% - 40px);
-            padding: 10px;
-            overflow-y: auto;
-            font-size: 12px;
+        .window-content { 
+            background-color: white; 
+            height: calc(100% - 40px); 
+            padding: 10px; 
+            overflow-y: auto; 
+            font-size: 12px; 
         }
-
-        .resizer {
-            width: 10px;
-            height: 10px;
-            background-color: #0066CC;
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            cursor: se-resize;
+        .resizer { 
+            width: 10px; 
+            height: 10px; 
+            background-color: #0066CC; 
+            position: absolute; 
+            bottom: 0; 
+            right: 0; 
+            cursor: se-resize; 
         }
-
-        .draggable {
-            width: 64px;
-            height: 64px;
-            position: absolute;
-            background-size: cover;
-            user-select: none;
+        .draggable { 
+            width: 64px; 
+            height: 64px; 
+            position: absolute; 
+            background-size: cover; 
+            user-select: none; 
         }
-
-        .text {
-            position: absolute;
-            text-align: center;
-            font-family: 'Comic Sans MS', cursive;
-            user-select: none;
+        .text { 
+            position: absolute; 
+            text-align: center; 
+            font-family: 'Comic Sans MS', cursive; 
+            user-select: none; 
         }
-
-        .mobile-message {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(255, 255, 255, 0.8);
-            font-size: 72px;
-            text-align: center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        .mobile-message { 
+            display: none; 
+            position: fixed; 
+            top: 0; 
+            left: 0; 
+            width: 100%; 
+            height: 100%; 
+            background-color: rgba(255, 255, 255, 0.8); 
+            font-size: 72px; 
+            text-align: center; 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
         }
     </style>
 </head>
 <body>
     <div class="mobile-message" id="mobileMessage">Mobile not supported yet, sorry :(</div>
-
     <!-- Journal Entries -->
     <div class="draggable" id="draggable1"></div>
     <div class="text" id="text1">6/21/24</div>
@@ -97,15 +90,41 @@
         // Initialize draggable journals
         for (let i = 0; i < draggables.length; i++) {
             draggables[i].style.backgroundImage = `url(${imageUrls[0]})`;
+            loadPosition(i);  // Load position from localStorage
             draggables[i].addEventListener('dblclick', (event) => openJournalWindow(event, i));
             draggables[i].addEventListener('mousedown', (event) => {
                 if (!isDraggingWindow) dragStart(event, i);
             });
         }
 
-        // Function to open journal in a draggable window
+        // Function to load journal position from localStorage
+        function loadPosition(id) {
+            const savedPosition = JSON.parse(localStorage.getItem(`folder${id}Position`));
+            if (savedPosition) {
+                draggables[id].style.left = savedPosition.x + 'px';
+                draggables[id].style.top = savedPosition.y + 'px';
+                updateTextPosition(draggables[id], texts[id]);
+            } else {
+                let randomX = Math.floor(Math.random() * (window.innerWidth - 100));
+                let randomY = Math.floor(Math.random() * (window.innerHeight - 90));
+                draggables[id].style.left = randomX + 'px';
+                draggables[id].style.top = randomY + 'px';
+                updateTextPosition(draggables[id], texts[id]);
+            }
+        }
+
+        // Function to save position of journal to localStorage
+        function savePosition(id) {
+            const position = {
+                x: parseInt(draggables[id].style.left),
+                y: parseInt(draggables[id].style.top)
+            };
+            localStorage.setItem(`folder${id}Position`, JSON.stringify(position));
+        }
+
+        // Open journal in a draggable window
         function openJournalWindow(event, id) {
-            const url = `https://nuriel.net/journals/6.21.24.txt`; // Hardcoded URL since no hyperlink
+            const url = `https://nuriel.net/journals/6.21.24.txt`;
 
             const newWindow = document.createElement('div');
             newWindow.className = 'window';
@@ -187,54 +206,14 @@
                 }
             }
         });
-        function savePosition(id) {
-    const position = {
-        x: parseInt(draggables[id].style.left),
-        y: parseInt(draggables[id].style.top)
-    };
-    localStorage.setItem(`folder${id}Position`, JSON.stringify(position));
-}
-
-function loadPosition(id) {
-    const savedPosition = JSON.parse(localStorage.getItem(`folder${id}Position`));
-    if (savedPosition) {
-        draggables[id].style.left = savedPosition.x + 'px';
-        draggables[id].style.top = savedPosition.y + 'px';
-        updateTextPosition(draggables[id], texts[id]);
-    } else {
-        // Initialize random position if not saved
-        let randomX = Math.floor(Math.random() * (window.innerWidth - 100));
-        let randomY = Math.floor(Math.random() * (window.innerHeight - 90));
-        draggables[id].style.left = randomX + 'px';
-        draggables[id].style.top = randomY + 'px';
-        updateTextPosition(draggables[id], texts[id]);
-    }
-}
-
-function dragEnd() {
-    for (let i = 0; i < draggables.length; i++) {
-        if (isDragging[i]) {
-            isDragging[i] = false;
-            savePosition(i);
-        }
-    }
-}
 
         document.addEventListener('mouseup', () => {
             for (let i = 0; i < draggables.length; i++) {
                 if (isDragging[i]) {
                     isDragging[i] = false;
-                    const position = {
-                        x: parseInt(draggables[i].style.left),
-                        y: parseInt(draggables[i].style.top)
-                    };
-                    localStorage.setItem(`folder${i}Position`, JSON.stringify(position));
+                    savePosition(i);
                 }
             }
-
-            setTimeout(() => {
-                document.querySelectorAll('.hyperlink').forEach(link => link.setAttribute('href', link.getAttribute('data-href')));
-            }, 100);
         });
 
         // Updates the text position relative to the journal
