--- a/journals.html
+++ b/journals.html
@@ -37,11 +37,12 @@
 <body>
     <!--mobile not supported message-->
     <div class="mobile-message" id="mobileMessage">mobile not supported yet, sorry :(</div>
+    
     <!--journals attributes-->
-    <a class="hyperlink" href="https://nuriel.net/journals/6.21.24.txt" data-href="https://nuriel.net/journals/6.21.24.txt"> 
+    <a class="hyperlink" href="https://nuriel.net/journals/dialogue.txt" data-href="https://nuriel.net/journals/dialogue.txt"> 
         <div class="draggable" id="draggable1"></div>
     </a>
-    <div class="text" id="text1">6/21/24</div>
+    <div class="text" id="text1">dialogue</div>
     
     <!--js script to implement draggability and hyperlink functionality-->
     <script>
