--- a/testing.html
+++ b/testing.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        .window { 
-            width: 400px; 
-            height: 300px; 
-            border: 2px solid black; 
-            background-color: #C0C0C0; 
-            position: absolute; 
-            font-family: 'Courier New', Courier, monospace; 
-            user-select: none; 
-            box-shadow: 0 0 10px rgba(0,0,0,0.5); 
-            overflow: hidden; 
+        .window {
+            width: 400px;
+            height: 300px;
+            border: 2px solid black;
+            background-color: #C0C0C0;
+            position: absolute;
+            font-family: 'Courier New', Courier, monospace;
+            user-select: none;
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
+            overflow: hidden;
         }
-        .window-header { 
-            background-color: #0066CC; 
-            color: white; 
-            padding: 10px; 
-            cursor: move; 
-            display: flex; 
+        .window-header {
+            background-color: #0066CC;
+            color: white;
+            padding: 10px;
+            cursor: move;
+            display: flex;
             justify-content: space-between;
             align-items: center;
         }
@@ -35,64 +35,76 @@
             border-radius: 2px;
             cursor: pointer;
         }
-        .window-content { 
-            background-color: white; 
-            height: calc(100% - 40px); 
-            padding: 10px; 
-            overflow-y: auto; 
-            font-size: 12px; 
+        .window-content {
+            background-color: white;
+            height: calc(100% - 40px);
+            padding: 10px;
+            overflow-y: auto;
+            font-size: 12px;
         }
-        .resizer { 
-            width: 10px; 
-            height: 10px; 
-            background-color: #0066CC; 
-            position: absolute; 
-            bottom: 0; 
-            right: 0; 
-            cursor: se-resize; 
+        .resizer {
+            width: 10px;
+            height: 10px;
+            background-color: #0066CC;
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            cursor: se-resize;
         }
-        .draggable { 
-            width: 64px; 
-            height: 64px; 
-            position: absolute; 
-            background-size: cover; 
-            user-select: none; 
+        .draggable {
+            width: 64px;
+            height: 64px;
+            position: absolute;
+            background-size: cover;
+            user-select: none;
         }
-        .text { 
-            position: absolute; 
-            text-align: center; 
-            font-family: 'Comic Sans MS', cursive; 
-            user-select: none; 
+        .text {
+            position: absolute;
+            text-align: center;
+            font-family: 'Comic Sans MS', cursive;
+            user-select: none;
         }
-        .mobile-message { 
-            display: none; 
-            position: fixed; 
-            top: 0; 
-            left: 0; 
-            width: 100%; 
-            height: 100%; 
-            background-color: rgba(255, 255, 255, 0.8); 
-            font-size: 72px; 
-            text-align: center; 
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
+        .mobile-message {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.8);
+            font-size: 72px;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
 <body>
     <div class="mobile-message" id="mobileMessage">Mobile not supported yet, sorry :(</div>
+
+    <!-- Journal 1 -->
     <div class="draggable" id="draggable1"></div>
     <div class="text" id="text1">6/21/24</div>
 
+    <!-- Journal 2 -->
+    <div class="draggable" id="draggable2"></div>
+    <div class="text" id="text2">Dialogue</div>
+
     <script>
         const imageUrls = ['https://raw.githubusercontent.com/FireMS/nuriel/main/journals/journal.png'];
-        const draggables = [document.getElementById('draggable1')];
-        const texts = [document.getElementById('text1')];
+        const draggables = [
+            document.getElementById('draggable1'),
+            document.getElementById('draggable2')
+        ];
+        const texts = [
+            document.getElementById('text1'),
+            document.getElementById('text2')
+        ];
         let isDraggingWindow = false;
-        let journalStates = [false];
+        let journalStates = [false, false];
 
-        // mobile check
+        // Mobile check
         const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
         if (isMobile) {
             document.getElementById('mobileMessage').style.display = 'flex';
@@ -100,17 +112,17 @@
             document.getElementById('mobileMessage').style.display = 'none';
         }
 
-        // drag functionality (w new double click detection)
+        // Initialize draggable elements
         for (let i = 0; i < draggables.length; i++) {
             draggables[i].style.backgroundImage = `url(${imageUrls[0]})`;
-            loadPosition(i);  // Load position from localStorage
+            loadPosition(i); // Load position from localStorage
             draggables[i].addEventListener('dblclick', (event) => openJournalWindow(event, i));
             draggables[i].addEventListener('mousedown', (event) => {
                 if (!isDraggingWindow) dragStart(event, i);
             });
         }
 
-        // loads position from cookie
+        // Load position from localStorage
         function loadPosition(id) {
             const savedPosition = JSON.parse(localStorage.getItem(`folder${id}Position`));
             if (savedPosition) {
@@ -126,7 +138,7 @@
             }
         }
 
-        // saves position to cookie
+        // Save position to localStorage
         function savePosition(id) {
             const position = {
                 x: parseInt(draggables[id].style.left),
@@ -135,12 +147,15 @@
             localStorage.setItem(`folder${id}Position`, JSON.stringify(position));
         }
 
-        // open journal in a draggable window
+        // Open journal in a draggable window
         function openJournalWindow(event, id) {
             if (journalStates[id]) return; // Prevent opening multiple windows for the same journal
             journalStates[id] = true;
 
-            const url = `https://nuriel.net/journals/6.21.24.txt`;
+            const urls = [
+                `https://nuriel.net/journals/6.21.24.txt`,
+                `https://nuriel.net/journals/dialogue.txt`
+            ];
 
             const newWindow = document.createElement('div');
             newWindow.className = 'window';
@@ -172,7 +187,7 @@
             resizer.className = 'resizer';
             newWindow.appendChild(resizer);
 
-            fetch(url)
+            fetch(urls[id])
                 .then(response => response.text())
                 .then(text => {
                     content.innerText = text;
@@ -194,7 +209,7 @@
                 };
             };
 
-            let isResizing = false; //how the fuck does this work
+            let isResizing = false;
             resizer.onmousedown = (e) => {
                 isResizing = true;
                 document.onmousemove = (e) => {
@@ -215,7 +230,7 @@
 
         let offsets = {};
         let isDragging = [];
-        
+
         function dragStart(event, id) {
             isDragging[id] = true;
             const rect = draggables[id].getBoundingClientRect();
@@ -245,7 +260,7 @@
             }
         });
 
-        // updates text relative to journals
+        // Update text relative to journals
         function updateTextPosition(draggable, text) {
             const folderRect = draggable.getBoundingClientRect();
             const textLeft = folderRect.left + (folderRect.width - text.offsetWidth) / 2;
