--- a/journals.html
+++ b/journals.html
@@ -85,7 +85,7 @@
 
     <!-- Journal 1 -->
     <div class="draggable" id="draggable1"></div>
-    <div class="text" id="text1">6/21/24</div>
+    <div class="text" id="text1">placeholder</div>
 
     <!-- Journal 2 -->
     <div class="draggable" id="draggable2"></div>
